efk/es-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-external-service
  namespace: kube-system
  labels:
    k8s-app: elasticsearch-logging
spec:
  ports:
    - name: es-db
      port: 9200
      protocol: TCP
      targetPort: db
    - name: es-cluster
      port: 9300
      protocol: TCP
      targetPort: transport
  selector:
    statefulset.kubernetes.io/pod-name: es-sf-0
