efk/es-statefulset.yaml
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-sf
  namespace: kube-system
  labels:
    k8s-app: es
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: es
  replicas: 2
  selector:
    matchLabels:
      k8s-app: es
  template:
    metadata:
      labels:
        k8s-app: es
    spec:
      serviceAccountName: elasticsearch-logging
      nodeSelector:
        openinode: "worker"
      containers:
        - image: elastic/elasticsearch:7.1.0
          name: elasticsearch-logging
          securityContext:
            runAsUser: 1000
            runAsGroup: 0
          resources:
            # need more cpu upon initialization, therefore burstable class
            limits:
              cpu: 4000m
              memory: 12Gi
            requests:
              cpu: 4000m
              memory: 12Gi
          ports:
            - containerPort: 9200
              name: db
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-logging
              mountPath: /data
            - name: esdata
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-logging
          emptyDir: {}
        - name: esdata
          hostPath:
            path: /usr/share/elasticsearch
            type: DirectoryOrCreate
      # Elasticsearch requires vm.max_map_count to be at least 262144.
      # If your OS already sets up this number to a higher value, feel free
      # to remove this init container.
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: kube-system
  labels:
    k8s-app: es
spec:
  clusterIP: None
  ports:
    - name: es-db
      port: 9200
      protocol: TCP
      targetPort: db
    - name: es-cluster
      port: 9300
      protocol: TCP
      targetPort: transport
  selector:
    k8s-app: es
