efk/es-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /es/(.*)
        backend:
          serviceName: es-external-service
          servicePort: 9200
